Ya terminé ojalá no de problemas

--- a/Guia01_AlvinBaires/src/main/webapp/Reportes/Reporte1.jrxml
+++ b/Guia01_AlvinBaires/src/main/webapp/Reportes/Reporte1.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="563d7261-a9c5-47ca-8f67-1276d7964f1a">
-	<property name="ireport.zoom" value="1.0"/>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Reporte1" language="groovy" pageWidth="595" pageHeight="842" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="563d7261-a9c5-47ca-8f67-1276d7964f1a">
+	<property name="ireport.zoom" value="1.2100000000000004"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="CodigoUnidad" class="java.lang.String"/>
@@ -111,95 +111,74 @@ and visi.codi_unid_orga_visi = $P{CodigoUnidad}]]>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="48" splitType="Stretch">
+		<band height="52" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="0" width="555" height="31" uuid="3c0c9f56-e21b-475d-8ca3-348627fd6186"/>
-				<textElement textAlignment="Center">
+				<reportElement x="0" y="0" width="595" height="32" uuid="3c0c9f56-e21b-475d-8ca3-348627fd6186"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font size="24" isBold="true"/>
 				</textElement>
 				<text><![CDATA[VISITAS RELIZADAS EN]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="0" y="28" width="555" height="20" uuid="c8e87073-fb1a-4fc2-86e0-307c62522d09"/>
-				<textElement textAlignment="Center">
+				<reportElement x="0" y="32" width="595" height="20" uuid="c8e87073-fb1a-4fc2-86e0-307c62522d09"/>
+				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font size="15"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{NOMB_UNID_ORGA}]]></textFieldExpression>
 			</textField>
 		</band>
 	</title>
-	<pageHeader>
-		<band height="8" splitType="Stretch"/>
-	</pageHeader>
 	<columnHeader>
-		<band height="22" splitType="Stretch">
+		<band height="20" splitType="Stretch">
 			<staticText>
 				<reportElement x="0" y="0" width="138" height="20" uuid="f9d0d4b8-c4f6-4f62-9f86-efed10dc7eec"/>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[FECHA Y HORA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="138" y="0" width="138" height="20" uuid="36098941-9b7b-4352-834e-f39999eca911"/>
-				<textElement textAlignment="Center">
+				<reportElement x="138" y="0" width="277" height="20" uuid="36098941-9b7b-4352-834e-f39999eca911"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[MOTIVO DE LA VISITA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="276" y="0" width="138" height="20" uuid="ded12335-f823-427e-af2a-c28058496553"/>
-				<textElement textAlignment="Center">
+				<reportElement x="415" y="0" width="180" height="20" uuid="ded12335-f823-427e-af2a-c28058496553"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[NOMBRE]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="414" y="0" width="138" height="20" uuid="08957297-a5d5-489b-a09e-a59f3f852074"/>
-				<textElement textAlignment="Center">
-					<font size="12" isBold="true"/>
-				</textElement>
-				<text><![CDATA[APELLIDO]]></text>
+				<text><![CDATA[VISITANTE]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="21" splitType="Stretch">
+		<band height="20" splitType="Stretch">
 			<textField>
 				<reportElement x="0" y="0" width="138" height="20" uuid="adfbefaa-24a4-4e39-b84a-8d9d447ba13f"/>
-				<textElement textAlignment="Center"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{FECH_HORA_ENTR_VISI}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="138" y="0" width="138" height="20" uuid="fc45d11a-3d69-4a16-a5b5-3db91889442a"/>
-				<textElement textAlignment="Center"/>
+				<reportElement x="138" y="0" width="277" height="20" uuid="fc45d11a-3d69-4a16-a5b5-3db91889442a"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{MOTI_VISI}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="276" y="0" width="138" height="20" uuid="da92915b-f88e-46c1-a1ea-21d0046a053b"/>
-				<textElement textAlignment="Center"/>
-				<textFieldExpression><![CDATA[$F{NOMB_PERS}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="414" y="0" width="138" height="20" uuid="75bd4cd1-f72a-40fe-ae1e-b45437ae6713"/>
-				<textElement textAlignment="Center"/>
-				<textFieldExpression><![CDATA[$F{APEL_PERS}]]></textFieldExpression>
+				<reportElement x="415" y="0" width="180" height="20" uuid="da92915b-f88e-46c1-a1ea-21d0046a053b"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{NOMB_PERS} + " " + $F{APEL_PERS}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
-	<columnFooter>
-		<band height="45" splitType="Stretch"/>
-	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch">
+		<band height="20" splitType="Stretch">
 			<textField>
-				<reportElement x="455" y="34" width="100" height="20" uuid="5f7faa2c-760d-4148-9edd-944e379a3bb5"/>
-				<textElement textAlignment="Center"/>
+				<reportElement x="0" y="0" width="595" height="20" uuid="5f7faa2c-760d-4148-9edd-944e379a3bb5"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageFooter>
-	<summary>
-		<band height="42" splitType="Stretch"/>
-	</summary>
 </jasperReport>
